Style: ChartOptions now uses app.css MetaTrader 5-style panel for consistent UI